ontol/ontol-compiler/test-cases/error/parser/def3.on
def @hello world() // ERROR parse error: found `@hello`, expected one of `@private`, `@open`, `@extern`, `@symbol`, identifier
